x2goclient (3.99.0.1-0~x2go1) UNRELEASED; urgency=low

  * New upstream version (3.99.0.1):
    - Set TCP_NODELAY (equals: turn Nagle off) for SSH graphical port forwarding
      tunnel.
    - Include cups/ppd.h in cupsprint.h, fixes build on Debian wheezy/sid.
  * Explicitly use source format 3.0 (native).
  * Build-depend on libssh-dev (>=0.4.7).
  * Update menu file in /debian folder (rename title to ,,X2go Client (Qt)'').

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 26 Jul 2011 14:37:20 +0200

x2goclient (3.99.0.0-0~x2go1) unstable; urgency=low

  [ Oleksandr Shneyder ]
  * fixed loadbalancing in LDAP mode on multiply X2Go servers
  * fixed session crash by pulling out of smart card

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 20 Jul 2011 16:33:08 +0200

x2goclient (3.0.1.21-0~x2go1) unstable; urgency=low

  * changes in windows plugin

 -- Oleksandr Shneyder <oleksandr.shneyder@obviously-nice.de>  Thu, 30 Jun 2011 18:45:25 +0200

x2goclient (3.0.1.20-0~x2go1) unstable; urgency=low

  * support menu
  * custom background
  * custom icon on broker auth dialog
  * fixed creation of desktop icons on windows

 -- Oleksandr Shneyder <oleksandr.shneyder@obviously-nice.de>  Fri, 08 Apr 2011 19:18:30 +0200

x2goclient (3.0.1.19-0~x2go1) unstable; urgency=low

  * Support to get sessions from for web broker

 -- Oleksandr Shneyder <oleksandr.shneyder@obviously-nice.de>  Thu, 29 Mar 2011 18:34:08 +0200

x2goclient (3.0.1.18-0~x2go3) unstable; urgency=low

  * Add ssh (server) as runtime dependency
  * React to bug #627990, prefer man2html-base over man2html.
  * Use x2goumount-session instead of old x2goumount_session command.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 14 Jul 2011 09:07:59 +0200

x2goclient (3.0.1.18-0~x2go2) unstable; urgency=low

  * adds man page skel (TODO: options)
  * fixes all open lintian issues

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 17 May 2011 20:16:55 +0200
