@@ -2,7 +2,8 @@
 
 MAN2HTML_BIN = man2html
 MAN2HTML_SRC   = man
-MAN2HTML_DEST = .build_man2html/html
+BUILD_DIR = .build_man2html
+MAN2HTML_DEST = $(BUILD_DIR)/html
 
 man_pages = `cd $(MAN2HTML_SRC) && find * -type f`
 
@@ -14,3 +15,8 @@ build_man2html:
 	mkdir -p $(MAN2HTML_DEST)
 	for man_page in $(man_pages); do mkdir -p `dirname $(MAN2HTML_DEST)/$$man_page`; done
 	for man_page in $(man_pages); do $(MAN2HTML_BIN) -r $(MAN2HTML_SRC)/$$man_page > $(MAN2HTML_DEST)/$$man_page.html; done
+
+clean: clean_man2html
+
+clean_man2html:
+	rm -Rf $(BUILD_DIR)
